refactor: Changed keybinds, window rules and auto start setup

--- a/dotfiles/.config/hypr/conf/keybinding.conf
+++ b/dotfiles/.config/hypr/conf/keybinding.conf
@@ -146,9 +146,9 @@ bind = $mainMod SHIFT, M, fullscreen, 1
 bind = $mainMod SHIFT, F, layoutmsg, focusmaster
 bind = $mainMod SHIFT, F, fullscreen, 0
 
-bind = $mainMod, HOME, exec, sh ~/.config/ml4w/settings/system-monitor.sh
-bind = $mainMod SHIFT, HOME, exec, sh ~/.config/ml4w/settings/system-monitor-alt.sh
-bind = $mainMod, END, exec, sh ~/.config/ml4w/settings/software.sh
+bind = $mainMod SHIFT, UP, exec, sh ~/.config/ml4w/settings/system-monitor.sh
+bind = ALT SHIFT, UP, exec, sh ~/.config/ml4w/settings/system-monitor-alt.sh
+bind = $mainMod SHIFT, DOWN, exec, sh ~/.config/ml4w/settings/software.sh
 bind = $mainMod, NEXT, layoutmsg, rollnext
 bind = $mainMod, PRIOR, layoutmsg, rollprev
 
