--- a/dotfiles/.config/hypr/conf/windowrule.conf
+++ b/dotfiles/.config/hypr/conf/windowrule.conf
@@ -37,8 +37,8 @@ windowrulev2 = float, center, class:^((?i).*megasync.*)$
 
 # Settings
 
-windowrulev2 = float, class:^(jetbrains-.*)$, title:^((?i).*settings.*|(?i)project structure|(?i)new project)$
-windowrulev2 = center, class:^(jetbrains-.*)$, title:^((?i).*settings.*|(?i)project structure|(?i)new project)$
+# windowrulev2 = nofocus, class:^(jetbrains-.*)$, floating:1
+windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^((?i).*settings.*|(?i)project structure|(?i)new project)$
 windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i).*settings.*)$
 windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i)project structure)$
 # windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^((?i)new project)$
@@ -143,6 +143,9 @@ windowrulev2 = maximize, class:^((?i)$w_class)$, initialTitle:^((?i)Rhythmbox)$
 
 #TradingView
 #$w_class=TradingView
+
+# nwg-panel-config
+windowrulev2 = float, class:nwg-panel-config
 
 
 # -------------------------------------------------------------------------
