--- a/dotfiles/.config/hypr/conf/autostart.conf
+++ b/dotfiles/.config/hypr/conf/autostart.conf
@@ -4,8 +4,11 @@
 # /_/ |_\_,_/\__/\___/___/\__/\_,_/_/  \__/ 
 #                                           
 
-# Setup XDG for screen sharing and start waypaper and waybar
+# Setup XDG for screen sharing and start waypaper and waybar (commented waybar)
 exec-once = ~/.config/hypr/scripts/xdg.sh
+
+# Start nwg-panel
+exec-once = nwg-panel &
 
 # Load Wallpaper
 exec-once = ~/.config/hypr/scripts/wallpaper-restore.sh
