refactor: updated nwg-panel config

--- a/dotfiles/.config/hypr/conf/windowrule.conf
+++ b/dotfiles/.config/hypr/conf/windowrule.conf
@@ -91,6 +91,9 @@ windowrulev2 = size 50% 80%, class:^((?i).*nemo)$, title:^((?i)Propiedades de.*|
 windowrulev2 = float, class:^((?i).*Calendar)$
 windowrulev2 = center, class:^((?i).*Calendar)$
 
+# Gnome Weather
+windowrulev2 = float, center, class:org.gnome.Weather
+
 # Nemo Terminal
 windowrulev2 = float, class:^((?i)nemo-terminal-prefs)$
 windowrulev2 = center, class:^((?i)nemo-terminal-prefs)$
