--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -5,7 +5,7 @@
 #                /___/
 #
 # Configuration
-font_family                 JetBrainsMono Nerd Font
+font_family                 MesloLGS NF
 font_size                   12
 bold_font                   auto
 italic_font                 auto
