refactor: nwg-panel setting changes

--- a/dotfiles/.config/nwg-panel/config
+++ b/dotfiles/.config/nwg-panel/config
@@ -593,21 +593,35 @@
     "start-hidden": false,
     "sway-mode": {},
     "hyprland-submap": {},
-    "keyboard-layout": {},
+    "keyboard-layout": {
+      "keyboard-device-hyprland": "",
+      "root-css-name": "root-executor",
+      "css-name": "executor-label",
+      "show-icon": true,
+      "icon-size": 16,
+      "interval": 0,
+      "icon-placement": "left",
+      "tooltip-text": "LMB: Next layout, RMB: Menu",
+      "angle": 0.0
+    },
     "tray": {},
     "random-wallpaper": {},
     "executor-cpuav": {
       "script": "gopsuinfo -i a",
       "interval": 2,
       "tooltip-text": "CPU average load",
-      "on-left-click": "foot -e htop",
+      "on-left-click": "sh ~/.config/ml4w/settings/system-monitor.sh",
       "on-middle-click": "",
       "on-right-click": "",
       "on-scroll-up": "",
       "on-scroll-down": "",
       "css-name": "",
       "icon-size": 16,
-      "icon-placement": "right"
+      "icon-placement": "right",
+      "root-css-name": "",
+      "angle": 0.0,
+      "sigrt": 34,
+      "use-sigrt": false
     },
     "executor-temp": {
       "script": "gopsuinfo -i t",
@@ -620,33 +634,45 @@
       "on-scroll-down": "",
       "css-name": "",
       "icon-size": 16,
-      "icon-placement": "left"
+      "icon-placement": "left",
+      "root-css-name": "",
+      "angle": 0.0,
+      "sigrt": 34,
+      "use-sigrt": false
     },
     "executor-memory": {
       "script": "gopsuinfo -i m",
       "interval": 5,
       "tooltip-text": "",
-      "on-left-click": "",
+      "on-left-click": "sh ~/.config/ml4w/settings/system-monitor.sh",
       "on-middle-click": "",
       "on-right-click": "",
       "on-scroll-up": "",
       "on-scroll-down": "",
       "css-name": "",
       "icon-size": 16,
-      "icon-placement": "left"
+      "icon-placement": "left",
+      "root-css-name": "",
+      "angle": 0.0,
+      "sigrt": 34,
+      "use-sigrt": false
     },
     "executor-drives": {
       "script": "gopsuinfo -i n",
       "interval": 15,
       "tooltip-text": "",
-      "on-left-click": "",
+      "on-left-click": "partitionmanager",
       "on-middle-click": "",
       "on-right-click": "",
       "on-scroll-up": "",
       "on-scroll-down": "",
       "css-name": "",
       "icon-size": 16,
-      "icon-placement": "left"
+      "icon-placement": "left",
+      "root-css-name": "",
+      "angle": 0.0,
+      "sigrt": 34,
+      "use-sigrt": false
     },
     "executor-updates": {
       "script": "sway-check-updates",
@@ -676,6 +702,23 @@
       "on-scroll-down": "",
       "root-css-name": "",
       "icon-placement": "left",
+      "angle": 0.0,
+      "sigrt": 34,
+      "use-sigrt": false
+    },
+    "executor-cpubar": {
+      "script": "gopsuinfo -c g",
+      "interval": 1,
+      "tooltip-text": "",
+      "on-left-click": "",
+      "on-middle-click": "",
+      "on-right-click": "",
+      "on-scroll-up": "",
+      "on-scroll-down": "",
+      "css-name": "",
+      "icon-size": 16,
+      "icon-placement": "left",
+      "root-css-name": "",
       "angle": 0.0,
       "sigrt": 34,
       "use-sigrt": false
