refactor: nwg-panel setup

--- a/dotfiles/.config/hypr/conf/keybinding.conf
+++ b/dotfiles/.config/hypr/conf/keybinding.conf
@@ -36,7 +36,8 @@ bind = $mainMod, PRINT, exec, $HYPRSCRIPTS/screenshot.sh # Take a screenshot
 bind = $mainMod SHIFT, S, exec, $HYPRSCRIPTS/screenshot.sh # Take a screenshot
 bind = $mainMod SHIFT, W, exec, waypaper # Open wallpaper selector
 bind = $mainMod CTRL, RETURN, exec, pkill rofi || rofi -show drun -replace -i # Open application launcher
-bind = ALT, R, exec, ~/.config/waybar/launch.sh # Reload waybar
+# bind = ALT, R, exec, ~/.config/waybar/launch.sh # Reload waybar
+bind = ALT, R, exec, ~/.config/nwg-panel/scripts/launch.sh
 bind = ALT, W, exec, ~/.config/waybar/toggle.sh # Toggle waybar
 bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh # Open clipboard manager
 bind = $mainMod SHIFT, T, exec, ~/.config/waybar/themeswitcher.sh # Open waybar theme switcher
@@ -127,7 +128,8 @@ bind = $mainMod, T, togglefloating # Alternar entre flotante y en mosaico
 bind = $mainMod, C, centerwindow
 #bind = $mainMod, J, cyclenext
 bind = $mainMod, ESCAPE, exit
-bind = $mainMod, R, exec, hyprctl reload & ~/.config/waybar/launch.sh
+# bind = $mainMod, R, exec, hyprctl reload & ~/.config/waybar/launch.sh
+bind = $mainMod, R, exec, hyprctl reload & ~/.config/nwg-panel/scripts/launch.sh
 
 # recordar cambiar la propiedad HandlePowerKey=ignore en /etc/systemd/logind.service y luego reiniciar systemd-logind.service
 bind = , XF86PowerOff, exec, wlogout
