feat: Add network menus to nwg-panel

--- a/dotfiles/.config/hypr/conf/keybinding.conf
+++ b/dotfiles/.config/hypr/conf/keybinding.conf
@@ -109,6 +109,8 @@ bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10-
 bind = ALT, F1, exec, playerctl play-pause # Audio play pause
 bind = ALT, RIGHT, exec, playerctl next # Audio next
 bind = ALT, LEFT, exec, playerctl previous # Audio previous
+bind = , XF86Launch3, exec, playerctl play-pause  # Audio play-pause
+
 
 # Shortcuts
 bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -replace -i # Open application launcher
@@ -117,7 +119,7 @@ bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiqu
 bind = $mainMod, I, exec, intellij-idea-ultimate-edition 
 bind = $mainMod SHIFT, I, exec, postman --ozone-platform-hint=wayland
 bind = ALT SHIFT, I, exec, httpie-desktop --ozone-platform-hint=wayland
-bind = , XF86Launch3, exec, spotify
+binde = , XF86Launch3, exec, spotify --ozone-platform-hint=wayland
 
 bind = $mainMod SHIFT, B, exec, brave
 
