--- a/dotfiles/.config/hypr/conf/windowrule.conf
+++ b/dotfiles/.config/hypr/conf/windowrule.conf
@@ -148,8 +148,7 @@ windowrulev2 = maximize, class:^((?i)$w_class)$, initialTitle:^((?i)Rhythmbox)$
 #$w_class=TradingView
 
 # nwg-panel-config
-windowrulev2 = float, class:nwg-panel-config
-
+windowrulev2 = float, center, class:nwg-panel-config
 
 # -------------------------------------------------------------------------
 
