refactor(keybindings): Add new whatsdesk shorcut

--- a/dotfiles/.config/hypr/conf/keybinding.conf
+++ b/dotfiles/.config/hypr/conf/keybinding.conf
@@ -120,6 +120,8 @@ bind = $mainMod, I, exec, intellij-idea-ultimate-edition
 bind = $mainMod SHIFT, I, exec, postman --ozone-platform-hint=wayland
 bind = ALT SHIFT, I, exec, httpie-desktop --ozone-platform-hint=wayland
 binde = , XF86Launch3, exec, spotify --ozone-platform-hint=wayland
+bind = $mainMod SHIFT, XF86Launch3, exec, whatsdesk --ozone-platform-hint=wayland
+
 
 bind = $mainMod SHIFT, B, exec, brave
 
