fix(panel): Set icon for network executor on indicators panel

--- a/dotfiles/.config/nwg-panel/config
+++ b/dotfiles/.config/nwg-panel/config
@@ -658,7 +658,7 @@
       "on-scroll-down": "",
       "css-name": "",
       "icon-size": 16,
-      "icon-placement": "right",
+      "icon-placement": "left",
       "root-css-name": "",
       "angle": 0.0,
       "sigrt": 34,
@@ -775,7 +775,7 @@
       "root-css-name": "",
       "css-name": "",
       "icon-placement": "left",
-      "icon-size": 8,
+      "icon-size": 16,
       "interval": 3,
       "angle": 0.0,
       "sigrt": 34,
