--- a/dotfiles/.config/hypr/conf/keybinding.conf
+++ b/dotfiles/.config/hypr/conf/keybinding.conf
@@ -17,6 +17,8 @@ bind = $mainMod, RETURN, togglespecialworkspace
 
 
 bind = $mainMod, B, exec, $ML4W_SETTINGS/browser.sh # Open the browser
+bind = $mainMod SHIFT, B, exec, brave
+bind = ALT SHIFT, B, exec, chromium
 
 bind = $mainMod, E, exec, $ML4W_SETTINGS/filemanager.sh # Open the filemanager
 bind = $mainMod SHIFT, E, exec, $ML4W_SETTINGS/filemanager_alt.sh
@@ -68,6 +70,8 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7 # Move active window to workspace 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8 # Move active window to workspace 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9 # Move active window to workspace 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10 # Move active window to workspace 10
+bind = ALT SHIFT, 0, movetoworkspace, special:special # Move active window to workspace special
+
 
 bind = $mainMod, right, workspace, m+1 # Open next workspace
 bind = $mainMod, left, workspace, m-1 # Open previous workspace
@@ -123,7 +127,6 @@ binde = , XF86Launch3, exec, spotify --ozone-platform-hint=wayland
 bind = $mainMod SHIFT, XF86Launch3, exec, whatsdesk --ozone-platform-hint=wayland
 
 
-bind = $mainMod SHIFT, B, exec, brave
 
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, M, fullscreen, 1
