--- a/dotfiles/.config/hypr/conf/windowrule.conf
+++ b/dotfiles/.config/hypr/conf/windowrule.conf
@@ -156,7 +156,11 @@ windowrulev2 = float, center, class:nwg-panel-config
 windowrulev2 = noblur, opaque, class:^((?i)jetbrains-.*)$
 windowrulev2 = noblur, opaque, class:^((?i).*codium)$
 
-windowrulev2 = fullscreen, noblur, opaque, noborder, class:^((?i)steam_app_.*)$
+# windowrulev2 = fullscreen, noblur, opaque, noborder, class:^((?i)steam_app_.*)$
+windowrulev2 = fullscreen, class:^(steam_app_.*)$
+# windowrulev2 = suppressevent maximize, class:^(steam_app_.*)$
+# windowrulev2 = suppressevent fullscreen, class:^(steam_app_.*)$
+
 
 # -------------------------------------------------------------------------
 
