--- a/dotfiles/.config/nwg-panel/config
+++ b/dotfiles/.config/nwg-panel/config
@@ -386,7 +386,7 @@
     "controls": "off",
     "menu-start": "off",
     "width": "auto",
-    "height": 24,
+    "height": 20,
     "margin-top": 0,
     "margin-bottom": 0,
     "padding-horizontal": 0,
@@ -446,7 +446,7 @@
       "cmd-restart": "systemctl reboot",
       "cmd-shutdown": "systemctl -i poweroff",
       "autohide": true,
-      "file-manager": "thunar",
+      "file-manager": "nemo",
       "height": 0,
       "icon-size-large": 32,
       "icon-size-small": 16,
@@ -456,7 +456,7 @@
       "margin-right": 0,
       "margin-top": 0,
       "padding": 2,
-      "terminal": "foot",
+      "terminal": "kitty",
       "width": 0
     },
     "sway-taskbar": {
