refactor: nwg-panel setup, wallpaper change and more much setup

--- a/dotfiles/.config/hypr/conf/custom.conf
+++ b/dotfiles/.config/hypr/conf/custom.conf
@@ -22,6 +22,10 @@ cursor {
 # Blur for waybar
 layerrule = blur, waybar
 
+# Blur for nwg-panel
+layerrule = blur, nwg-panel
+
+
 # Console Screensaver
 $class_name = console_screensaver
 windowrulev2 = fullscreen, class:($class_name)
