--- a/dotfiles/.config/hypr/conf/keybinding.conf
+++ b/dotfiles/.config/hypr/conf/keybinding.conf
@@ -10,11 +10,13 @@ $TERMINAL = $(cat $ML4W_SETTINGS/terminal.sh)
 
 # DEFAULT, algunas eliminadas y otras modificads
 
-# Applications
+# Development
 bind = $mainMod SHIFT, RETURN, exec, $ML4W_SETTINGS/terminal.sh
 bind = $mainMod, RETURN, togglespecialworkspace
-# bind = ALT, RETURN, togglespecialworkspace name:exotic
-
+bind = $mainMod SHIFT, I, togglespecialworkspace, dev-utils
+bind = ALT SHIFT, I, togglespecialworkspace, trading-tools
+bind = $mainMod, I, exec, intellij-idea-ultimate-edition
+# bind = $mainMod SHIFT, I, exec, httpie-desktop --ozone-platform-hint=wayland
 
 bind = $mainMod, B, exec, $ML4W_SETTINGS/browser.sh # Open the browser
 bind = $mainMod SHIFT, B, exec, brave
@@ -22,6 +24,7 @@ bind = ALT SHIFT, B, exec, chromium
 
 bind = $mainMod, E, exec, $ML4W_SETTINGS/filemanager.sh # Open the filemanager
 bind = $mainMod SHIFT, E, exec, $ML4W_SETTINGS/filemanager_alt.sh
+
 
 
 # Windows
@@ -120,9 +123,6 @@ bind = , XF86Launch3, exec, playerctl play-pause  # Audio play-pause
 bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -replace -i # Open application launcher
 bind = $mainMod, L, exec, hyprlock # Lock screen
 bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiquarium
-bind = $mainMod, I, exec, intellij-idea-ultimate-edition 
-bind = $mainMod SHIFT, I, exec, postman --ozone-platform-hint=wayland
-bind = ALT SHIFT, I, exec, httpie-desktop --ozone-platform-hint=wayland
 binde = , XF86Launch3, exec, spotify --ozone-platform-hint=wayland
 bind = $mainMod SHIFT, XF86Launch3, exec, whatsdesk --ozone-platform-hint=wayland
 
