--- a/dotfiles/.config/hypr/conf/windowrule.conf
+++ b/dotfiles/.config/hypr/conf/windowrule.conf
@@ -38,9 +38,10 @@ windowrulev2 = float, center, class:^((?i).*megasync.*)$
 # Settings
 
 # windowrulev2 = nofocus, class:^(jetbrains-.*)$, floating:1
-windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^((?i).*settings.*|(?i)project structure|(?i)new project)$
-windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i).*settings.*)$
-windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i)project structure)$
+windowrulev2 = float, class:^(jetbrains-.*)$, title:(?i)^(.*settings.*|project structure|new project)$
+windowrulev2 = center, class:^(jetbrains-.*)$, title:(?i)^(.*settings.*|project structure|new project)$
+windowrulev2 = size 1000 700, center, class:^(jetbrains-.*)$, title:^((?i).*settings.*)$
+windowrulev2 = size 700 400, center, class:^(jetbrains-.*)$, title:^((?i)project structure)$
 # windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^((?i)new project)$
 windowrulev2 = size 600 400, class:^(jetbrains-.*)$, title:^((?i)Evaluate)$
 windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^((?i)Replace All)$
@@ -48,6 +49,8 @@ windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^(Undo)$
 windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^(Redo)$
 # windowrulev2 = noinitialfocus, class:^(jetbrains-.*)$, floating:1
 windowrulev2 = nofocus, class:^(jetbrains-.*)$, floating:1
+# windowrulev2 = nofocus, class:^(jetbrains-.*)$, floating:1, title:^(?!(Project Structure)$).* 
+
 
 windowrulev2 = maximize, class:^((?i)VisualVM.*)$
 
@@ -163,77 +166,3 @@ windowrulev2 = fullscreen, class:^(steam_app_.*)$
 
 
 # -------------------------------------------------------------------------
-
-# workspace 1
-$WORKSPACE=1
-windowrulev2 = workspace $WORKSPACE, class:^((?i)jetbrains-.*)$
-
-
-
-# workspace 2
-$WORKSPACE=2
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*Postman.*)$
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*HTTPie.*)$
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*codium)$
-
-
-
-# workspace 3
-$WORKSPACE=3
-windowrulev2 = workspace $WORKSPACE, class:^((?i)TradingView.*)$
-
-
-
-# workspace 4
-$WORKSPACE=4
-windowrulev2 = workspace $WORKSPACE, class:^((?i)brave.*)$
-
-
-
-# workspace 5
-$WORKSPACE=5
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*chrome.*)$
-
-
-
-windowrulev2 = workspace $WORKSPACE, class:^(zoom)$
-windowrulev2 = workspace $WORKSPACE, class:^((?i)cursor.*)$
-
-
-
-# workspace 6
-$WORKSPACE=6
-
-
-
-# workspace 7
-$WORKSPACE=7
-
-
-
-# workspace 8
-$WORKSPACE=8
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*Nautilus)$
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*dolphin)$
-windowrulev2 = workspace $WORKSPACE, class:^((?i)nemo)$
-
-
-
-# workspace 9
-$WORKSPACE=9
-windowrulev2 = workspace $WORKSPACE, class:^((?i)whatsdesk)$
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*telegram.*)$
-
-
-
-# workspace 10
-$WORKSPACE=10
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*spotify.*)$
-windowrulev2 = workspace $WORKSPACE, class:^((?i)rhythmbox)$
-
-
-
-# workspace special
-$WORKSPACE=special:special
-windowrulev2 = fullscreen, onworkspace:name:$WORKSPACE
-# windowrulev2 = float, onworkspace:name:$WORKSPACE
