--- a/dotfiles/.config/nwg-panel/config
+++ b/dotfiles/.config/nwg-panel/config
@@ -161,8 +161,8 @@
       "icon-size": 16,
       "chars": 35,
       "scroll": true,
-      "button-css-name": "",
-      "label-css-name": "",
+      "button-css-name": "player-buttons",
+      "label-css-name": "player-label",
       "interval": 1,
       "show-cover": true,
       "cover-size": 24,
