--- a/dotfiles/.config/nwg-panel/common-settings.json
+++ b/dotfiles/.config/nwg-panel/common-settings.json
@@ -1,8 +1,6 @@
 {
   "restart-on-display": true,
   "restart-delay": 500,
-  "processes-background-only": false,
-  "processes-own-only": true,
-  "processes-interval-ms": 2000,
-  "run-through-compositor": true
+  "processes-backgroud-only": true,
+  "processes-own-only": true
 }
